# start-leptos-ssr

./: Cargo.toml
public/app/: theme_toggle_transition.css  theme_toggle_transition.js
src/: app.rs  lib.rs  main.rs  shell.rs
src/components/: reactive_indicator.rs  theme_toggle.rs
src/components/ui/: button.rs
style/: tailwind.css
