[package]
name = "start_leptos_ssr"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
cfg-if = "1"
http = "1"
leptos = { version = "0.8", features = ["nightly"] }
leptos_meta = "0.8"
leptos_router = { version = "0.8", features = ["nightly"] }
leptos_ui = "0.1"
log = "0.4"
thiserror = "2"
tw_merge = { version = "0.1", features = ["variant", "debug"] }
wasm-bindgen = "0.2"

# Client-side dependencies
console_error_panic_hook = { version = "0.1", optional = true }
console_log = { version = "1", optional = true }

# Server-side dependencies
axum = { version = "0.8", optional = true }
leptos_axum = { version = "0.8", optional = true }
tokio = { version = "1", default-features = false, features = ["macros", "rt-multi-thread"], optional = true }
tower = { version = "0.5", default-features = false, features = ["util"], optional = true }
tower-http = { version = "0.6", default-features = false, features = ["fs", "trace"], optional = true }

[features]
default = []
hydrate = [
    "leptos/hydrate",
    "dep:console_error_panic_hook",
    "dep:console_log",
]
ssr = [
    "leptos/ssr",
    "leptos_meta/ssr",
    "leptos_router/ssr",
    "dep:leptos_axum",
    "dep:axum",
    "dep:tokio",
    "dep:tower",
    "dep:tower-http",
]

[profile.dev]
debug = false
panic = "abort"

[profile.release]
codegen-units = 1
lto = true
opt-level = 'z'

[[bin]]
name = "start_leptos_ssr"
required-features = ["ssr"]

[package.metadata.leptos]
output-name = "start_leptos_ssr"
site-root = "target/site"
site-pkg-dir = "pkg"
tailwind-input-file = "style/tailwind.css"
assets-dir = "public"
site-addr = "127.0.0.1:3000"
reload-port = 3001
browserquery = "defaults"
watch = false
env = "DEV"
bin-features = ["ssr"]
bin-default-features = false
lib-features = ["hydrate"]
lib-default-features = false
